feat(lobby,parkour): cosmeticos, GUIs sem borda, parkour por placas+holograma e padroes de codigo
Lobby/cosmeticos:
- pets fluidos (interpolacao por tick, rotacao suave, idle bob + particulas)
- menu de vestuario: chapeus + armaduras (couro colorido, conjuntos metalicos, VIP)
- persistencia cross-session de cosmeticos/chapeu/pet/armadura (inventory blob)
- GUIs sem painel roxo: layout centralizado e botao Voltar nos submenus
- fix: toggle de jogadores volta ao slot correto (5), sem duplicar

Mundo:
- desativa End (bukkit.yml) e Nether (ALLOW_NETHER) + guards de portal/teleporte

Parkour (reprojeto):
- curso definido por comando (setspawn/setstart/setcheckpoint/setfinish), na
  config central -> replica para todos os lobbies como o spawn
- placa de pressao + bloco tematico colocados sob cada ponto; holograma (TextDisplay)
  acima de cada placa, com recorde no fim
- run trava o jogador: aventura, sem fly, comandos bloqueados, hotbar do minigame
  (checkpoint/reiniciar/sair); restaura o lobby ao terminar/sair
- LobbyProtection ignora quem esta correndo (tag) para nao abortar a queda

Docs/padroes:
- docs/CODING_STANDARDS.md, CLAUDE.md e .editorconfig

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>